fix(style): make scheme-container fluid
- Make sure that the authorization button remains on the right without further checking in the style.
- Make sure elements do not overlap

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -781,32 +781,24 @@
 
 .scheme-container
 {
-    margin: 0 0 20px 0;
-    padding: 30px 0;
-
     background: $scheme-container-background-color;
     box-shadow: 0 1px 2px 0 rgba($scheme-container-box-shadow-color,.15);
 
+    /*
+    * We let the parent control space and alignements of children
+    */
     .schemes
     {
         display: flex;
         align-items: flex-end;
         justify-content: space-between;
+        margin-bottom: 1rem;
+        padding: 1.5rem;
+        gap: .5rem;
         flex-wrap: wrap;
 
-        gap: 10px;
-
-        /*
-        This wraps the servers or schemes selector.
-        This was added to make sure the Authorize button is always on the right
-        and the servers or schemes selector is always on the left.
-        */
         > .schemes-server-container
         {
-            display: flex;
-            flex-wrap: wrap;
-
-            gap: 10px;
 
             > label
             {
@@ -815,8 +807,8 @@
 
                 display: flex;
                 flex-direction: column;
-
-                margin: -20px 15px 0 0;
+                row-gap: .2rem;
+                margin-bottom: 0;
 
                 @include text_headline();
 
@@ -828,16 +820,6 @@
                 }
             }
         }
-
-        /*
-        This checks if the schemes-server-container is not present and
-        aligns the authorize button to the right
-        */
-        &:not(:has(.schemes-server-container))
-        {
-            justify-content: flex-end;
-        }
-
         /*
         Target Authorize Button in schemes wrapper
         This was added here to fix responsiveness issues with the authorize button
@@ -846,16 +828,11 @@
         .auth-wrapper
         {
             flex: none;
-            justify-content: start;
 
             .authorize
             {
-                padding-right: 20px;
+                padding: .25rem 1rem;
                 margin: 0;
-
-                display: flex;
-
-                flex-wrap: nowrap;
             }
         }
     }
